--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -21,11 +21,11 @@
             android:layout_marginStart="8dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@tools:sample/backgrounds/scenic"
             app:imageUrl="@{movie.image}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
         <LinearLayout
             android:layout_width="wrap_content"
